apps/upskill-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upskill-api
  labels:
    app.kubernetes.io/name: upskill-api
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: upskill-api
    app.kubernetes.io/component: api
